{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 194,
  "lineage": "0c74a697-6e89-e5ca-11cc-773b56a909fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTANCE_NEW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:711454914059:instance/i-00ba8355f7a69daa4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ba8355f7a69daa4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fdf5b06753b92565",
            "private_dns": "ip-10-0-1-48.us-west-2.compute.internal",
            "private_ip": "10.0.1.48",
            "public_ip": "34.210.205.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fa3739ceff2ff8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02aafd117d67750a2",
            "tags": {
              "type": "new-instance-test"
            },
            "tags_all": {
              "type": "new-instance-test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058553b14ba46942d"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWS_KEY",
            "aws_security_group.SECURITY_GROUP_PORTS",
            "aws_subnet.SUBNET",
            "aws_vpc.VPC",
            "data.aws_ami.AWS_AMI_RES",
            "data.aws_availability_zones.zones",
            "data.http.myip",
            "data.template_file.USER_DATA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:internet-gateway/igw-002e776558f3f0799",
            "id": "igw-002e776558f3f0799",
            "owner_id": "711454914059",
            "tags": {
              "Name": "AWS GW"
            },
            "tags_all": {
              "Name": "AWS GW"
            },
            "vpc_id": "vpc-00c0d7719f7b7c856"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ROUTING_TABLE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:route-table/rtb-0b9ba865437a35c68",
            "id": "rtb-0b9ba865437a35c68",
            "owner_id": "711454914059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002e776558f3f0799",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RoutingTable-public"
            },
            "tags_all": {
              "Name": "RoutingTable-public"
            },
            "vpc_id": "vpc-00c0d7719f7b7c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ROUTE_TABLE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062ea939a831ce40a",
            "route_table_id": "rtb-0b9ba865437a35c68",
            "subnet_id": "subnet-02aafd117d67750a2"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.ROUTING_TABLE",
            "aws_subnet.SUBNET",
            "aws_vpc.VPC",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091ec8c97345067bc",
            "route_table_id": "rtb-0b9ba865437a35c68",
            "subnet_id": "subnet-05fa05fbe006664c5"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.ROUTING_TABLE",
            "aws_subnet.SUBNET",
            "aws_vpc.VPC",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SECURITY_GROUP_PORTS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:security-group/sg-058553b14ba46942d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058553b14ba46942d",
            "ingress": [
              {
                "cidr_blocks": [
                  "91.196.54.5/32"
                ],
                "description": "HTTP from VPC",
                "from_port": 1234,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1234
              },
              {
                "cidr_blocks": [
                  "91.196.54.5/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls20210906115306545800000001",
            "name_prefix": "allow_tls",
            "owner_id": "711454914059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c0d7719f7b7c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:subnet/subnet-02aafd117d67750a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02aafd117d67750a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711454914059",
            "tags": {
              "Name": "Subnet-public-1"
            },
            "tags_all": {
              "Name": "Subnet-public-1"
            },
            "vpc_id": "vpc-00c0d7719f7b7c856"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:subnet/subnet-05fa05fbe006664c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05fa05fbe006664c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711454914059",
            "tags": {
              "Name": "Subnet-public-2"
            },
            "tags_all": {
              "Name": "Subnet-public-2"
            },
            "vpc_id": "vpc-00c0d7719f7b7c856"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:vpc/vpc-00c0d7719f7b7c856",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0515434e33e6f9ce2",
            "default_route_table_id": "rtb-0e5cd523bc5279c0a",
            "default_security_group_id": "sg-0a1f2709a83da6a38",
            "dhcp_options_id": "dopt-7fd1ed07",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c0d7719f7b7c856",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5cd523bc5279c0a",
            "owner_id": "711454914059",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}